src/objects/c2g__codaPayment__c.object
<CustomObject>
    <customHelpPage>c2g__codahelppayment</customHelpPage>
    <description>Stores header details for a payment proposal.</description>
    <fields>
        <fullName>c2g__AccountCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipName>PaymentsAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BatchableContextId__c</fullName>
        <label>Batchable Context Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CWODimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipName>PaymentsCWO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CWODimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipName>PaymentsCWO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CWODimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipName>PaymentsCWO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ClickedPay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clicked Pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CurrencyMode__c</fullName>
        <label>Currency Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Document</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CurrencyWriteOff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Write-off</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipName>PaymentsCurrencyWriteOff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DiscardReason__c</fullName>
        <description>The reason this Payment was discarded.</description>
        <label>Discard Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountRollup__c</fullName>
        <label>Deprecated: Discount</label>
        <summarizedField>c2g__codaPaymentAccountLineItem__c.c2g__Discount__c</summarizedField>
        <summaryForeignKey>c2g__codaPaymentAccountLineItem__c.c2g__Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountTotal__c</fullName>
        <label>Discount</label>
        <summarizedField>c2g__codaPaymentAccountLineItem__c.c2g__DiscountTotal__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaPaymentAccountLineItem__c.c2g__AccountSelected__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaPaymentAccountLineItem__c.c2g__Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipName>PaymentsDC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DualRate__c</fullName>
        <label>Dual Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__ErrorControl__c</fullName>
        <label>Error Control</label>
        <picklist>
            <picklistValues>
                <fullName>Retrieving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Background Posting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discarding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__GrossValueRollup__c</fullName>
        <label>Deprecated: Gross Value</label>
        <summarizedField>c2g__codaPaymentAccountLineItem__c.c2g__GrossValue__c</summarizedField>
        <summaryForeignKey>c2g__codaPaymentAccountLineItem__c.c2g__Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__GrossValueTotal__c</fullName>
        <label>Gross Value</label>
        <summarizedField>c2g__codaPaymentAccountLineItem__c.c2g__GrossValueTotal__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaPaymentAccountLineItem__c.c2g__AccountSelected__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaPaymentAccountLineItem__c.c2g__Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__GrossValue__c</fullName>
        <label>Gross Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Payments (Payment Currency)</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentDate__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentMediaTypes__c</fullName>
        <label>Payment Media</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentMethod__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentRate__c</fullName>
        <label>Payment Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Template</label>
        <referenceTo>c2g__codaPaymentTemplate__c</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentTypes__c</fullName>
        <label>Payment Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentValueRollup__c</fullName>
        <label>Deprecated: Payment Value</label>
        <summarizedField>c2g__codaPaymentAccountLineItem__c.c2g__PaymentValue__c</summarizedField>
        <summaryForeignKey>c2g__codaPaymentAccountLineItem__c.c2g__Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentValueTotal__c</fullName>
        <label>Payment Value</label>
        <summarizedField>c2g__codaPaymentAccountLineItem__c.c2g__PaymentValueTotal__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaPaymentAccountLineItem__c.c2g__AccountSelected__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaPaymentAccountLineItem__c.c2g__Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentValue__c</fullName>
        <label>DEPRECATED: Payment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial period</description>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SDRDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipName>PaymentsSDR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SDRDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipName>PaymentsSDR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SDRDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipName>PaymentsSDR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SettlementDiscountReceived__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Settlement Discount</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipName>PaymentsSettlementDiscountReceived</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retrieving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retrieved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selected</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Refined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matched</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preparing for Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Background Posting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceling Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>FF_Fly_Now_Pay_Later_Limited_06936813_codaPayment</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Fly Now Pay Later Limited (06936813)</label>
        <queue>FF_Fly_Now_Pay_Later_Limited_06936813</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_Limited_codaPayment</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund Limited</label>
        <queue>FF_Travelfund_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_co_uk_Limited_codaPayment</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund.co.uk Limited</label>
        <queue>FF_Travelfund_co_uk_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__PaymentTemplate__c</columns>
        <columns>c2g__BankAccount__c</columns>
        <columns>c2g__PaymentDate__c</columns>
        <columns>c2g__Period__c</columns>
        <columns>c2g__GrossValueTotal__c</columns>
        <columns>c2g__DiscountTotal__c</columns>
        <columns>c2g__PaymentValueTotal__c</columns>
        <columns>c2g__PaymentMediaTypes__c</columns>
        <columns>c2g__PaymentMethod__c</columns>
        <columns>c2g__Status__c</columns>
        <columns>c2g__DiscardReason__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>